# gan-brain

./: CMakeLists.txt
src/: CMakeLists.txt
src/ganutil/: CMakeLists.txt  sampleImage.cxx  sampleImage.xml  splitImage.cxx  splitImage.xml
src/tf/classification/: neuralnetwork.py  runEval.py  runTraining.py
src/tf/cluster/: server.py  train.py
src/tf/gan/: ._runGeneration.py  neuralnetwork.py  runGeneration.py  runTraining.py
src/tf/util/: netFunctions.py  nrrdToTfrecords.py  nrrdToTfrecordsLabels.py  saveAsTfrecords.py
